dark mode changes and fixes

--- a/src/app/match-details/components/match-details/match-details.component.scss
+++ b/src/app/match-details/components/match-details/match-details.component.scss
@@ -3,11 +3,20 @@
     src: url('../../../../assets/Quinquefive-ALoRM.ttf');
 }
 
+th,
+td {
+    text-align: center;
+    padding: 10px;
+    min-width: 30px;
+}
+
 .dark {
     display: flex;
     height: 100%;
+    width: 100%;
     flex-direction: column;
     background-color: rgb(33, 34, 41);
+    overflow: auto;
 
     .headers {
         font-weight: bold;
@@ -42,11 +51,11 @@
         color: white;
     }
 
-    a {
+    .player-name a {
         color: rgb(56, 186, 226);
     }
 
-    a:hover {
+    .player-name a:hover {
         color: aquamarine;
     }
 }
@@ -87,7 +96,8 @@
     align-items: center;
     gap: 3%;
     font-size: 10px;
-    width: 150%;
+    width: 300px;
+    min-width: 100%;
     padding-right: 25%;
 }
 
@@ -107,6 +117,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 1%;
+    padding-bottom: 2%;
     font-size: 22px;
 }
 
@@ -116,6 +127,7 @@
     justify-content: center;
     margin-top: 1%;
     font-size: 30px;
+    padding-bottom: 2%;
 }
 
 .team {
@@ -142,7 +154,7 @@
 
 .rank-number {
     position: absolute;
-    transform: translate(10%, -2%);
+    transform: translate(40%, -150%);
     font-size: 7px;
     font-style: italic;
     letter-spacing: -0.5px;
@@ -153,64 +165,5 @@
 }
 
 .rank-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.switch {
     position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 20px;
-    top: 5px;
-    right: 8px;
-    margin-left: auto;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgb(33, 34, 41);
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    border-radius: 34px;
-}
-
-.slider:before {
-    position: absolute;
-    content: '';
-    height: 15px;
-    width: 15px;
-    left: 5px;
-    bottom: 3px;
-    background-color: rgb(255, 255, 255);
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    border-radius: 50%;
-}
-
-input:checked+.slider {
-    background-color: #d6d6d6;
-}
-
-input:focus+.slider {
-    box-shadow: 0 0 1px #d6d6d6;
-}
-
-input:checked+.slider:before {
-    -webkit-transform: translateX(16px);
-    -ms-transform: translateX(16px);
-    transform: translateX(16px);
-    background-color: rgb(33, 34, 41);
 }
